<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/pref_header_general">

        <Preference
            android:key="notify_channels_settings"
            android:title="@string/pref_channels_manage" />

        <Preference
            android:key="general_reset"
            android:title="@string/pref_general_reset" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_header_server">

        <CheckBoxPreference
            android:key="server_use_custom"
            android:title="@string/perf_server_use_custom"
            android:summary="@string/pref_server_use_custom_summary"
            android:defaultValue="false" />

        <EditTextPreference
            android:dependency="server_use_custom"
            android:key="server_custom_url"
            android:title="@string/pref_server_custom_url"
            android:defaultValue="https://api.pushjet.io"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:maxLines="1"
            android:inputType="textUri"/>

        <Preference
            android:key="server_register"
            android:title="@string/pref_server_register"
            android:summary="@string/pref_server_register_summary" />

    </PreferenceCategory>

</PreferenceScreen>
